--- a/inst/doc/hydroTSM_Vignette.Rnw
+++ b/inst/doc/hydroTSM_Vignette.Rnw
@@ -19,7 +19,7 @@
 \section{Installation}
 \label{sec:Installation}
 
-\item Installing hydroTSM, along with the required and suggested packages:
+Installing hydroTSM, along with the required and suggested packages:
 
 <<eval=FALSE>>=
 install.packages("hydroTSM", dependencies=c("Depends", "Suggests"))
