--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ NEWS/ChangeLog for hydroTSM
 --------------------------
 
 0.2-3	(under development)
-	o 'drawxaxis':  -) it was re-writen, in order to take advantage of some functionalities of the 'xts' 
+	o 'drawxaxis':  -) it was re-written, in order to take advantage of some features of the 'xts' 
 			   package (now added as a dependence).
 	 		-) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "weeks", "hours", "minutes", 
 			   and "seconds", which should work with sub-daily time series.
