--- a/NEWS
+++ b/NEWS
@@ -19,12 +19,13 @@ NEWS/ChangeLog for hydroTSM
 	 		-) an incorrect default title for the daily histogram was fixed.
 	 		-) the default value for 'cex' was changed from 0.7 to 0.3
 	 		-) new arguments: 'from', 'to', for plotting a slice of the original time series
+	 		-) thanks to Tom Elliott for pointing out my attention to this function again !.
 	o 'hydroplot':  -) new argument: 'date.fmt' for being used with the new arguments 'from' and 'to'
 	o 'sfreq':  	-) it works now with xts objects
 	o 'vector2zoo': -) added error checking for detecting if the lenght of the numeric vector and the dates are equal.
 
 0.2-2	14-Apr-2011
-	o 'fdc' and 'fdcu': new argument 'yat', for setting the position of the 'y' axis labels.
+	o 'fdc' and 'fdcu': new argument 'yat', for setting the position of the 'y' axis labels (thanks to Santosh Aryal !)
 	o All the 'print' calls used to display information messages were replaced by a call to 'message'.
 	o SVN started to be used for package development in Rforge (thanks to Simon Urbanek for his great support)
 	o Vignette added ('Introductory Analysis of Daily Precipitation Data with hydroTSM')
