added seasonal plot to 'hydroplot' & 'sname2plot' + xts/matrix compatibility for the other functions

--- a/NEWS
+++ b/NEWS
@@ -3,27 +3,39 @@ NEWS/ChangeLog for hydroTSM
 
 0.2-3	(under development)
 	o TODO: replace 'drawxaxis' by 'drawTimeAxis' in all the package
-	o 'drawxaxis':  -) it was re-written, in order to take advantage of some features of the 'xts' 
-			   package (now added as a dependence), and now it should work with sub-daily 
-			   time series.
-			-) its name changed from 'drawxaxis' to 'drawTimeAxis', in order to have a 
-			   more intuitive name. The old 'drawxaxis' function is deprecated, but 
-			   still be kept for back-compatibility reasons.			
-	 		-) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "quarters", "weeks", "hours", 
-	 		   "minutes", and "seconds", and its default value was changed to "auto".
-	o 'hydroplot' : -) it takes advantage of the new 'drawTimeAxis' function.
-	  'sname2plot': -) it works with xts objects as well.
-			-) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "quarters", "weeks", "hours", 
-	 		   "minutes", and "seconds", and its default value was changed to "auto". 
-	 		-) the name of 'x' is now used as default for the Y axis label.
-	 		-) an incorrect default title for the daily histogram was fixed.
-	 		-) the default value for 'cex' was changed from 0.7 to 0.3
-	 		-) new arguments: 'from', 'to', for plotting a slice of the original time series
-	 		-) thanks to Tom Elliott for pointing out my attention to this function again !.
-	o 'hydroplot':  -) new argument: 'date.fmt' for being used with the new arguments 'from' and 'to'
-	o 'sfreq':  	-) it works now with xts objects
-	o 'vector2zoo': -) added error checking for detecting if the lenght of the numeric vector and the dates are equal.
-	o 'dwi'       : -) fixed documentation of the 'out.unit' argument.
+	o 'drawxaxis'       : -) it was re-written, in order to take advantage of some features of the 'xts' 
+			         package (now added as a dependence), and now it should work with sub-daily 
+			         time series.
+			      -) its name was changed from 'drawxaxis' to 'drawTimeAxis', in order to have a 
+			         more intuitive name. The old 'drawxaxis' function is deprecated, but 
+			         still be kept for back-compatibility reasons.			
+	 		      -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "quarters", "weeks", "hours", 
+	 		         "minutes", and "seconds", and its default value was changed to "auto".
+	o 'hydroplot'       : -) it takes advantage of the new 'drawTimeAxis' function.
+	  'sname2plot'      : -) now it is able to plot seasonal values (ptype="seasonal")
+	                      -) it works with xts objects as well.
+			      -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "quarters", "weeks", "hours", 
+	 		         "minutes", and "seconds", and its default value was changed to "auto". 
+	 		      -) the name of 'x' is now used as default for the Y axis label.
+	 		      -) an incorrect default title for the daily histogram was fixed.
+	 		      -) the default value for 'cex' was changed from 0.7 to 0.3
+	 		      -) new arguments: 'from', 'to', for plotting a slice of the original time series
+	 		      -) thanks to Tom Elliott for pointing out my attention to this function again !.
+	o 'hydroplot'       : -) new argument: 'date.fmt' for being used with the new arguments 'from' and 'to'
+	o 'sfreq'           : -) it works now with xts objects
+	o 'vector2zoo'      : -) added error checking for detecting if the lenght of the numeric vector and the dates are equal.
+	o 'dwi'             : -) fixed documentation of the 'out.unit' argument.
+	o 'dm2seasonal'     : -) new argument 'out.fmt', for better compatibility with zoo and xts objects.
+	                      -) it works with matrix objects as well.
+	                      -) it works with xts objects as well.
+	o 'daily2annual'    : -) it works with xts objects as well.
+	o 'daily2monthly'   : -) it works with xts objects as well.
+	o 'monthlyfunction' : -) it works with matrix objects as well.
+	                      -) it works with xts objects as well.
+	o 'annualfunction'  : -) it works with matrix objects as well.
+	                      -) it works with xts objects as well.
+	o 'seasonalfunction': -) it works with matrix objects as well.
+	                      -) it works with xts objects as well.
 
 0.2-2	14-Apr-2011
 	o 'fdc' and 'fdcu': new argument 'yat', for setting the position of the 'y' axis labels (thanks to Santosh Aryal !)
