--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,7 @@ NEWS/ChangeLog for hydroTSM
 			         time series.
 			      -) its name was changed from 'drawxaxis' to 'drawTimeAxis', in order to have a 
 			         more intuitive name. The old 'drawxaxis' function is deprecated, but 
-			         still be kept for back-compatibility reasons.			
+			         it is still kept for back-compatibility.			
 	 		      -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "quarters", "weeks", "hours", 
 	 		         "minutes", and "seconds", and its default value was changed to "auto".
 	o 'hydroplot'       : -) it takes advantage of the new 'drawTimeAxis' function.
@@ -18,14 +18,14 @@ NEWS/ChangeLog for hydroTSM
 	                      -) it works with xts objects as well.
 			      -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "quarters", "weeks", "hours", 
 	 		         "minutes", and "seconds", and its default value was changed to "auto". 
+	 		      -) new arguments: 'from', 'to', for plotting a slice of the original time series
 	 		      -) the name of 'x' is now used as default for the Y axis label.
 	 		      -) an incorrect default title for the daily histogram was fixed.
-	 		      -) the default value for 'cex' was changed from 0.7 to 0.3
-	 		      -) new arguments: 'from', 'to', for plotting a slice of the original time series
-	 		      -) thanks to Tom Elliott for pointing out my attention to this function again !.
+	 		      -) the default value for 'cex' was changed from 0.7 to 0.3	 		      
+	 		      -) thanks to T. Elliott for pointing out my attention to this function again !.
 	 		      -) new argument: 'h', for plotting horizontal lines in seasonal plots
 	o 'hydroplot'       : -) new argument: 'date.fmt' for being used with the new arguments 'from' and 'to'
-	o 'sfreq'           : -) it works now with xts objects
+	o 'sfreq'           : -) it now works with xts objects
 	o 'vector2zoo'      : -) added error checking for detecting if the lenght of the numeric vector and the dates are equal.
 	o 'dwi'             : -) fixed documentation of the 'out.unit' argument.
 	o 'dm2seasonal'     : -) new argument 'out.fmt', for better compatibility with zoo and xts objects.
