new monthtlyfunction.zoo and updated monthlyfunction.data.frame. Updated DESCRIPTION and NEWS

--- a/NEWS
+++ b/NEWS
@@ -36,8 +36,9 @@ NEWS/ChangeLog for hydroTSM
 	                      -) it works with xts objects as well.
 	o 'daily2annual'    : -) it works with xts objects as well.
 	o 'daily2monthly'   : -) it works with xts objects as well.
-	o 'monthlyfunction' : -) it works with matrix objects as well.
-	                      -) it works with xts objects as well.
+	o 'monthlyfunction' : -) new 'monthlyfunction.zoo', which works with vectors and matrixes
+			      -) it works now with matrix objects as well.
+	                      -) it works now with xts objects as well.
 	o 'annualfunction'  : -) it works with matrix objects as well.
 	                      -) it works with xts objects as well.
 	o 'seasonalfunction': -) it works with matrix objects as well.
