--- a/NEWS
+++ b/NEWS
@@ -44,6 +44,8 @@ NEWS/ChangeLog for hydroTSM
 	o 'seasonalfunction': -) it works with matrix objects as well.
 	                      -) it works with xts objects as well.
 	o 'fdc' and 'fdcu'  : -) new argument 'xat', for setting the position of the 'x' axis labels when 'log="x"'
+	o Some 'as.Date' calls were changed to 'zoo:ad.Date', in order to work properly with zoo >= 1.7-2
+	
 
 0.2-2	14-Apr-2011
 	o 'fdc' and 'fdcu': new argument 'yat', for setting the position of the 'y' axis labels  when 'log="y"' (thanks to Santosh Aryal !)
