--- a/NEWS
+++ b/NEWS
@@ -34,8 +34,6 @@ NEWS/ChangeLog for hydroTSM
 	o 'dm2seasonal'     : -) new argument 'out.fmt', for better compatibility with zoo and xts objects.
 	                      -) it works with matrix objects as well.
 	                      -) it works with xts objects as well.
-	o 'daily2annual'    : -) it works with xts objects as well.
-	o 'daily2monthly'   : -) it works with xts objects as well.
 	o 'monthlyfunction' : -) new 'monthlyfunction.zoo', ~ 8 times faster than before (for data.frames, when out.type="data.frame")
 			      -) it works now with matrix objects as well.
 	                      -) it works now with xts objects as well.
@@ -44,7 +42,11 @@ NEWS/ChangeLog for hydroTSM
 	                      -) it works with xts objects as well.
 	o 'annualfunction'  : -) new 'annualfunction.zoo', much faster than before for data.frames.
 			      -) it works with matrix objects as well.
-	                      -) it works with xts objects as well.	
+	                      -) it works with xts objects as well.
+	o 'daily2monthly'   : -) new 'daily2monthly.zoo', much faster than before (for data.frames, when out.type="data.frame")
+			      -) it works withannualxts objects as well.	 
+	o 'daily2annual'    : -) new 'daily2monthly.zoo', much faster than before (for data.frames, when out.type="data.frame")
+			      -) it works with xts objects as well.			                           	
 	o 'fdc' and 'fdcu'  : -) new argument 'xat', for setting the position of the 'x' axis labels when 'log="x"'
 	o Some 'as.Date' calls were changed to 'zoo:ad.Date', in order to work properly with zoo >= 1.7-2
 	
